--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.react-datepicker-wrapper input {
+    @apply bg-transparent;
+    @apply placeholder:text-black-300;
+    @apply outline-0;
+    @apply appearance-none;
+}
