feat: improve input style on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,9 @@
     @apply outline-0;
     @apply appearance-none;
 }
+
+input {
+    @apply focus:outline-0;
+    @apply shadow-none;
+    @apply outline-none;
+}
